--- a/view/onyx-user/user/forgot-password.phtml
+++ b/view/onyx-user/user/forgot-password.phtml
@@ -1,2 +1,15 @@
+
+<p><?php echo $this->message;?></p>
+<?php if($this->posted === false){?>
+<form role="form" action="" method="POST" enctype="multipart/form-data">
+<div class="form-group">
+  <label for="exampleInputEmail1">Email address</label>
+  <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required>
+</div>
+<button type="submit" class="btn btn-default">Submit</button>
+</form>
+<?php }else{?>
 <h3>Password reset email sent</h3>
-    
+<p>Please check your register email address and follow the instructions.</p>
+<?php }?>    
+
