--- a/view/onyx-user/user/login.phtml
+++ b/view/onyx-user/user/login.phtml
@@ -20,8 +20,11 @@
           </div>
           <div class="checkbox">
             <label>
-              <input type="checkbox" name="remeber" id="remeber"> Remeber me
+              <input type="checkbox" name="remeber" id="remeber"> Remember me
             </label>
+          </div>
+          <div class="form-group">
+              <p>Forgot your password? <a href="/user/forgot-password">click here</a></p>
           </div>
           <input type="hidden" name="backto" id="backto" value=""/>
           <button type="submit" class="btn btn-default">Submit</button>
