--- a/view/onyx-user/user/login.phtml
+++ b/view/onyx-user/user/login.phtml
@@ -26,7 +26,7 @@
           <div class="form-group">
               <p>Forgot your password? <a href="/user/forgot-password">click here</a></p>
           </div>
-          <input type="hidden" name="backto" id="backto" value=""/>
+          <input type="hidden" name="backto" id="backto" value="<?php echo $this->backto;?>"/>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
     </div>
