--- a/view/onyx-user/user/login.phtml
+++ b/view/onyx-user/user/login.phtml
@@ -1,3 +1,17 @@
+<form class="form-signin" role="form" action="" method="POST" enctype="multipart/form-data">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <input type="email" class="form-control" placeholder="Email address" name="email" id="email" required autofocus>
+        <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
+        <label class="checkbox">
+          <input type="checkbox" value="remember-me" name="remeber" id="remeber"> Remember me
+        </label>
+        <div class="form-group">
+              <p>Forgot your password? <a href="/user/forgot-password">click here</a></p>
+          </div>
+          <input type="hidden" name="backto" id="backto" value="<?php echo $this->backto;?>"/>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
+
 <div class="row">    
     <?php 
     if(is_array($this->messages)){         
@@ -8,27 +22,7 @@
     ?>
     <div class="col-md-12"><?php echo $messageBody; ?></div>
     <?php }?>   
-    <div class="col-md-12">
-        <form role="form" action="" method="POST" enctype="multipart/form-data">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required>
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" name="remeber" id="remeber"> Remember me
-            </label>
-          </div>
-          <div class="form-group">
-              <p>Forgot your password? <a href="/user/forgot-password">click here</a></p>
-          </div>
-          <input type="hidden" name="backto" id="backto" value="<?php echo $this->backto;?>"/>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-    </div>
-    
+        
 </div>
+
+
