cleaned up login forms

--- a/view/onyx-user/user/forgot-password.phtml
+++ b/view/onyx-user/user/forgot-password.phtml
@@ -1,15 +1,41 @@
-
-<p><?php echo $this->message;?></p>
-<?php if($this->posted === false){?>
-<form role="form" action="" method="POST" enctype="multipart/form-data">
-<div class="form-group">
-  <label for="exampleInputEmail1">Email address</label>
-  <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required>
+<div class="modal-header container-fluid">
+    <h2 class="avenir-black aqua-font">Reset Password</h2>
 </div>
-<button type="submit" class="btn btn-default">Submit</button>
+<form class="form container-fluid" action="/user/forgot-password" method="POST" enctype="multipart/form-data">
+    <?php if($this->posted === false){?>
+    <div class="modal-body">
+        <div class="row">
+            <div class="input-group col-sm-6 col-md-6">
+                <span class="input-group-addon login-icon">@</span>
+                <input type="text" name="email" id="email" required autofocus class="form-control" placeholder="Email">
+            </div>            
+        </div>
+        <div class="row avenir-medium login-error">
+            <div class=" col-sm-6 col-md-6 red-font">
+                <?php if($this->message){?><span class="fa fa-times"></span><?php echo $this->message;?><?php }?>
+            </div>             
+        </div>
+    </div>
+    <div class="modal-footer">
+        <div class="row">
+            <div class=" col-sm-6 col-md-6 align-right">
+                <input class="btn aqua avenir-medium more-btn login-button" type="submit" value="RESET" />
+            </div>
+        </div>
+    </div>
+    <?php }else{?>
+    <div class="modal-body">
+        <div class="row">
+            <h3>Password reset email sent</h3>
+            <p>Please check your register email address and follow the instructions.</p>
+        </div>
+    </div>
+    
+    <?php }?> 
 </form>
-<?php }else{?>
-<h3>Password reset email sent</h3>
-<p>Please check your register email address and follow the instructions.</p>
-<?php }?>    
+
+
+
+
+   
 
