--- a/view/onyx-user/user/login.phtml
+++ b/view/onyx-user/user/login.phtml
@@ -1,3 +1,6 @@
+<div class="modal-header container-fluid">
+    <h2 class="avenir-black aqua-font">LOGIN</h2>
+</div>
 <form class="form container-fluid" action="/user/login" method="POST" enctype="multipart/form-data">
     <div class="modal-body">
         <div class="row">
@@ -14,7 +17,18 @@
         <input type="hidden" name="backto" id="backto" value="<?php echo $this->backto;?>"/>
         <div class="row avenir-medium login-error">
             <div class=" col-sm-6 col-md-6 red-font">
-                <span class="fa fa-times"></span> LOGIN INCORRECT: 3 tries remaining
+                
+                <?php 
+                if(is_array($this->messages)){         
+                    $messageBody = '';
+                    foreach($this->messages as $message){
+                        $messageBody .= $message;
+                    }          
+                ?>
+                <div class="row">
+                    <div class="col-md-12"><span class="fa fa-times"></span><?php echo $messageBody; ?></div>
+                </div>
+                <?php }?> 
             </div>
              <div class=" col-sm-6 col-md-6">
                  <a class="aqua-font" href="/user/forgot-password">Forgot your password?</a>
@@ -33,19 +47,5 @@
         </div>
     </div>
 </form>
-
-
-<div class="row">    
-    <?php 
-    if(is_array($this->messages)){         
-        $messageBody = '';
-        foreach($this->messages as $message){
-            $messageBody .= '<p>'.$message.'</p>';
-        }          
-    ?>
-    <div class="col-md-12"><?php echo $messageBody; ?></div>
-    <?php }?>   
-        
-</div>
 
 
