--- a/view/onyx-user/user/reset.phtml
+++ b/view/onyx-user/user/reset.phtml
@@ -1,5 +1,5 @@
 <div class="row">
-    <?php if(!$this->success){?>
+    <?php if($this->success){?>
     <?php if($this->done){?>
     <div class="col-md-12">
         <div class="panel panel-default">
