--- a/view/onyx-user/user/login.phtml
+++ b/view/onyx-user/user/login.phtml
@@ -1,5 +1,6 @@
 <div class="modal-header container-fluid">
     <h2 class="avenir-black aqua-font">LOGIN</h2>
+    <?php echo $this->partial('partial/messages.phtml')?>
 </div>
 <form class="form container-fluid" action="/user/login" method="POST" enctype="multipart/form-data">
     <div class="modal-body">
@@ -16,20 +17,6 @@
         </div>
         <input type="hidden" name="backto" id="backto" value="<?php echo $this->backto;?>"/>
         <div class="row avenir-medium login-error">
-            <div class=" col-sm-6 col-md-6 red-font">
-                
-                <?php 
-                if(is_array($this->messages)){         
-                    $messageBody = '';
-                    foreach($this->messages as $message){
-                        $messageBody .= $message;
-                    }          
-                ?>
-                <div class="row">
-                    <div class="col-md-12"><span class="fa fa-times"></span><?php echo $messageBody; ?></div>
-                </div>
-                <?php }?> 
-            </div>
              <div class=" col-sm-6 col-md-6">
                  <a class="aqua-font" href="/user/forgot-password">Forgot your password?</a>
             </div>
