--- a/view/onyx-user/user/login.phtml
+++ b/view/onyx-user/user/login.phtml
@@ -1,38 +1,42 @@
-<div class="modal-header container-fluid">
-    <h2 class="avenir-black aqua-font">LOGIN</h2>
-    <?php echo $this->partial('partial/messages.phtml')?>
-</div>
-<form class="form container-fluid" action="/user/login" method="POST" enctype="multipart/form-data">
-    <div class="modal-body">
-        <div class="row">
-            <div class="input-group col-sm-6 col-md-6">
-                <span class="input-group-addon login-icon">@</span>
-                <input type="text" name="email" id="email" required autofocus class="form-control" placeholder="Email">
-            </div>
 
-            <div class="input-group col-sm-6 col-md-6">
-                <span class="input-group-addon fa fa-key login-icon"></span>
-                <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
-            </div>
+<h1 class="avenir-black aqua-font">LOGIN</h1>
+<?php echo $this->partial('partial/messages.phtml')?>
+<form class="form container-fluid" action="/user/login" method="POST" enctype="multipart/form-data">
+    <div class="row">
+        <div class="input-group col-sm-6 col-md-6">
+            <span class="input-group-addon login-icon fa fa-at grey"></span>
+            <input type="text" name="email" id="email" required autofocus class="form-control" placeholder="Email">
         </div>
-        <input type="hidden" name="backto" id="backto" value="<?php echo $this->backto;?>"/>
-        <div class="row avenir-medium login-error">
-             <div class=" col-sm-6 col-md-6">
-                 <a class="aqua-font" href="/user/forgot-password">Forgot your password?</a>
-            </div>
+        <div class="input-group col-sm-6 col-md-6">
+            <span class="input-group-addon fa fa-key login-icon grey"></span>
+            <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
         </div>
     </div>
-    <div class="modal-footer">
-        <div class="row">
-            <div class=" col-sm-6 col-md-6 avenir-roman align-left">
-                <input type="checkbox" value="remember-me" name="remeber" id="remeber" /> Remember my email
+    <input type="hidden" name="backto" id="backto" value="<?php echo $this->backto;?>"/>
+    <div class="row avenir-medium login-error">
+        
+         <div class="col-sm-6 col-md-6 input-group">
+             <a class="aqua-font" href="/user/forgot-password">Forgot your password?</a>
+        </div>
+    </div>
+    <div class="info-box form-footer avenir-roman">
+        <div class="inner clearfix">
+            <div class="col-md-6">
+                <input type="checkbox" value="remember-me" name="remeber" id="remeber" />
+                <label for="remeber">Remember my email</label>
             </div>
-            <div class=" col-sm-6 col-md-6 align-right">
+            <div class="right">
                 <button class="btn grey-light avenir-medium more-btn login-cancel" data-dismiss="modal">CANCEL</button>
                 <input class="btn aqua avenir-medium more-btn login-button" type="submit" value="LOGIN" />
             </div>
         </div>
     </div>
 </form>
+
+
+
+
+
+
 
 
