--- a/view/onyx-user/user/login.phtml
+++ b/view/onyx-user/user/login.phtml
@@ -1,6 +1,6 @@
 
 <h1 class="avenir-black aqua-font">LOGIN</h1>
-<?php echo $this->partial('partial/messages.phtml')?>
+<?php echo $this->partial('partial/userMessages.phtml')?>
 <form class="form container-fluid" action="/user/login" method="POST" enctype="multipart/form-data">
     <input id="do_not_fill_me_in" class="do_not_fill_me_in is-hidden" type="text" name="do_not_fill_me_in" size="25" value="" />
     <div class="row">
